added help page
Support/Help for users to adminstartor

--- a/PengYou_Version2/app/src/main/res/layout/activity_event.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_event.xml
@@ -15,6 +15,7 @@
         android:layout_below="@+id/event_participant"
         android:layout_centerVertical="true"
         android:layout_marginEnd="36dp"
+        android:backgroundTint="@android:color/holo_orange_light"
         android:text="Submit" />
 
     <TextView
