--- a/PengYou_Version2/app/src/main/res/menu/main_menu.xml
+++ b/PengYou_Version2/app/src/main/res/menu/main_menu.xml
@@ -6,14 +6,17 @@
         android:id="@+id/main_profile_btn"
         android:title="Profile" />
     <item
-        android:id="@+id/main_all_btn"
-        android:title="All Users" />
-    <item
         android:id="@+id/interest_page_btn"
         android:title="Interest Page" />
     <item
+        android:id="@+id/main_all_btn"
+        android:title="All Users" />
+    <item
         android:id="@+id/main_setting_btn"
         android:title="Account Settings" />
+    <item
+        android:id="@+id/help_setting_btn"
+        android:title="Help/Support" />
     <item
         android:id="@+id/main_logout_btn"
         android:title="@string/log_out" />
