View Specific Hangout Event
Added hangout events

--- a/PengYou_Version2/app/src/main/res/layout/activity_event.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_event.xml
@@ -7,37 +7,52 @@
     tools:context="com.example.jiayu.pengyou_version2.EventActivity">
 
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/event_single_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/event_participant">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_weight="1"
+            android:hint="Description" />
+
+    </android.support.design.widget.TextInputLayout>
+
     <Button
         android:id="@+id/event_submit_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/event_participant"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="36dp"
+        android:layout_below="@+id/event_single_description"
+        android:layout_marginEnd="26dp"
         android:backgroundTint="@android:color/holo_orange_light"
-        android:text="Submit" />
+        android:text="Submit"
+        android:textColor="@color/cardview_light_background" />
 
     <TextView
         android:id="@+id/event_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/interest_app_bar"
+        android:layout_below="@+id/view_app_bar"
         android:text="Select event type"
         android:textColor="@android:color/black"
-        android:textSize="30dp" />
+        android:textSize="20dp" />
 
     <Spinner
         android:id="@+id/event_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/event_prompt"
         android:autofillHints=" "
-        android:padding="25dp" />
+        android:padding="20dp" />
 
     <include
-        android:id="@+id/interest_app_bar"
+        android:id="@+id/view_app_bar"
         layout="@layout/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,44 +64,69 @@
         android:id="@+id/event_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="false"
+        android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="false"
         android:layout_below="@+id/event_spinner"
         android:baselineAligned="false">
+
+        <TextView
+            android:id="@+id/event_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="8dp"
+            android:text="Time of event"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/event_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="8dp"
+            android:text="Date of event"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/event_date_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/wallet_holo_blue_light"
+            android:text="Date Picker"
+            android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/event_title"
-            android:layout_marginTop="25dp"
+            android:layout_below="@+id/event_spinner"
+            android:layout_marginTop="14dp"
             android:hint="Event title"
             android:textSize="18sp" />
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/event_eventTime"
+        android:id="@+id/event_participant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/event_title">
 
-        <android.support.design.widget.TextInputEditText
+        <TextView
+            android:id="@+id/main_placeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Time of event"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:text="Location of event"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="18sp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/event_participant"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/event_eventTime">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:hint="No of participant"
             android:textSize="18sp" />
 
