--- a/PengYou_Version2/app/src/main/res/layout/activity_account.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_account.xml
@@ -11,7 +11,7 @@
 
 
     <include
-        android:id="@+id/interest_app_bar"
+        android:id="@+id/view_app_bar"
         layout="@layout/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         android:id="@+id/changepw_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/interest_app_bar"
+        android:layout_below="@+id/view_app_bar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         android:backgroundTint="@android:color/background_light"
@@ -46,9 +46,9 @@
         android:id="@+id/email_verify_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textViewUserEmailVerified"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="14dp"
+        android:layout_alignStart="@+id/changepw_btn"
+        android:layout_below="@+id/button3"
+        android:layout_marginTop="44dp"
         android:backgroundTint="@android:color/background_light"
         android:text="Email Verifcation"
         android:textColor="@android:color/holo_blue_dark" />
@@ -57,9 +57,8 @@
         android:id="@+id/textViewUserEmailVerified"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="19dp"
-        android:layout_toStartOf="@+id/button3"
+        android:layout_alignStart="@+id/email_verify_btn"
+        android:layout_below="@+id/email_verify_btn"
         android:text="TextView"
         android:textSize="14sp" />
 </RelativeLayout>
