--- a/PengYou_Version2/app/src/main/res/layout/activity_change_pw.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_change_pw.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.jiayu.pengyou_version2.ChangePwActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/interest_app_bar"
+        android:id="@+id/view_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/interest_app_bar"
+        android:layout_below="@+id/view_app_bar"
         android:layout_marginStart="26dp"
         android:layout_marginTop="80dp"
         android:layout_weight="1"
