--- a/PengYou_Version2/app/src/main/res/layout/activity_chat.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_chat.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.jiayu.pengyou_version2.ChatActivity">
 
     <include
-        android:id="@+id/interest_app_bar"
+        android:id="@+id/view_app_bar"
         layout="@layout/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/linearLayout"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/interest_app_bar">
+        android:layout_below="@+id/view_app_bar">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/messages_list"
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/linearLayout"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/interest_app_bar"></android.support.v7.widget.RecyclerView>
+            android:layout_below="@+id/view_app_bar"></android.support.v7.widget.RecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
