--- a/PengYou_Version2/app/src/main/res/layout/activity_account.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_account.xml
@@ -57,8 +57,8 @@
         android:id="@+id/textViewUserEmailVerified"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/email_verify_btn"
         android:layout_below="@+id/email_verify_btn"
+        android:layout_centerHorizontal="true"
         android:text="TextView"
         android:textSize="14sp" />
 </RelativeLayout>
