--- a/PengYou_Version2/app/src/main/res/layout/activity_change_pw.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_change_pw.xml
@@ -8,13 +8,14 @@
 
     tools:context="com.example.jiayu.pengyou_version2.ChangePwActivity">
 
-    <android.support.v7.widget.Toolbar
+    <include
         android:id="@+id/view_app_bar"
+        layout="@layout/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_weight="1" />
 
     <EditText
         android:id="@+id/editText3"
