--- a/PengYou_Version2/app/src/main/res/layout/activity_interest.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_interest.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/linearLayout2"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/view_app_bar" />
 
     <include
