--- a/PengYou_Version2/app/src/main/res/layout/activity_main.xml
+++ b/PengYou_Version2/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         android:layout_centerVertical="true"
         android:text="This is Main Page"
         android:textSize="24sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
